--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,20 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.wjholden.nmap"
-    android:versionCode="44"
-    android:versionName="0.7.5" >
+    android:versionCode="45"
+    android:versionName="0.7.6" >
 
     <uses-sdk
         android:minSdkVersion="7"
         android:targetSdkVersion="10" />
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="com.android.vending.CHECK_LICENSE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
 
     <application
         android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name" android:debuggable="false" android:allowBackup="false">
+        android:label="@string/app_name"  android:allowBackup="false">
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name" >
